# getgot

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/getting_started/: getting_started.ipynb  getting_started.py
getgot/: log.py  settings.py
getgot/llm_api/: base.py
getgot/llm_api/openai/: openai_client.py
getgot/memory/: basic_agent_memory.py
getgot/memory_types/: base.py  episodic.py  semantic.py
getgot/memory_types/main/: main_context.py  recent_messages.py
getgot/models/: message.py
getgot/prompts/: semantic_context.py
getgot/prompts/main/: recent_messages.py
getgot/schemas/openai/: chat_completion_request.py  chat_completion_response.py
tests/: test_main_context.py
